--- a/app/views/friends/index.html.erb
+++ b/app/views/friends/index.html.erb
@@ -1,2 +1,7 @@
-<h1>Friends#index</h1>
-<p>Find me in app/views/friends/index.html.erb</p>
+<h1>Friends</h1>
+<ul>
+    <% @friends.each do |friend| %>
+        <li><%= link_to friend.name, friend %></li>
+    <% end %>
+</ul>
+<%= link_to 'New Friend', new_friend_path %>
