--- a/app/views/friends/new.html.erb
+++ b/app/views/friends/new.html.erb
@@ -1,2 +1,3 @@
-<h1>Friends#new</h1>
-<p>Find me in app/views/friends/new.html.erb</p>
+<h1>New Friend</h1>
+<%= render 'form', friend: @friend %>
+<%= link_to 'Back', friends_path %>
