--- a/app/views/gifts/new.html.erb
+++ b/app/views/gifts/new.html.erb
@@ -1,2 +1,3 @@
-<h1>Gifts#new</h1>
-<p>Find me in app/views/gifts/new.html.erb</p>
+<h1>New Gift</h1>
+<%= render 'form', gift: @gift %>
+<%= link_to 'Back', friend_path(@friend) %>
