--- a/app/views/friends/_form.html.erb
+++ b/app/views/friends/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: friend, local: true) do |form| %>
+<%= form_with(model: friend, local: true, data: { turbo: false }) do |form| %>
     <div class="field">
         <%= form.label :Name %>
         <%= form.text_field :name %>
@@ -12,4 +12,15 @@
     <div class="actions">
         <%= form.submit %>
     </div>
+
+    <% if friend.errors.any? %>
+        <div id="errorMessage">
+            <h2><%= pluralize(friend.errors.count, "error") %> prohibited this friend from being saved:</h2>
+            <ul>
+                <% friend.errors.full_messages.each do |message| %>
+                    <li><%= message %></li>
+                <% end %>
+            </ul>
+        </div>
+    <% end %>
 <% end %>
