--- a/app/views/gifts/_form.html.erb
+++ b/app/views/gifts/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: [@friend, @gift], local: true) do |form| %>  
+<%= form_with(model: [@friend, @gift], local: true, data: { turbo: false }) do |form| %>  
     <div class="field">
         <%= form.label :Description %>
         <%= form.text_field :description %>
@@ -17,4 +17,15 @@
     <div class="actions">
         <%= form.submit %>
     </div>
+
+    <% if @gift.errors.any? %>
+        <div id="errorMessage">
+        <h2><%= pluralize(@gift.errors.count, "error") %> prohibited this gift from being saved:</h2>
+            <ul>
+                <% @gift.errors.full_messages.each do |message| %>
+                    <li><%= message %></li>
+                <% end %>
+            </ul>
+        </div>
+    <% end %>
 <% end %>
