--- a/app/views/friends/_form.html.erb
+++ b/app/views/friends/_form.html.erb
@@ -1,11 +1,11 @@
 <%= form_with(model: friend, local: true, data: { turbo: false }) do |form| %>
     <div class="field">
-        <%= form.label :Name %>
+        <%= form.label :name, "Name" %>
         <%= form.text_field :name %>
     </div>
 
     <div class="field">
-        <%= form.label :Birthday %>
+        <%= form.label :birthday, "Birthday" %>
         <%= form.date_select :birthday, discard_year: true, default: { day: 1, month: 1 } %>
     </div>
 
