--- a/app/views/friends/show.html.erb
+++ b/app/views/friends/show.html.erb
@@ -1,22 +1,25 @@
 <h1><%= @friend.name %></h1>
-<p>Birthday: <%= @friend.birthday.strftime("%B %d") %></p>
+<h2>Birthday: <%= @friend.birthday.strftime("%B %d") %></h2>
 
 <h2>Gifts</h2>
 <ul>
     <% @friend.gifts.each do |gift| %>
         <li>
             <%= gift.description %> - 
-            <%= number_to_currency(gift.price) %> - 
+            <%= number_to_currency(gift.price) %>  
             <% if gift.link.present? %>
-            <% formatted_link = gift.link.start_with?('http://', 'https://') ? gift.link : "http://#{gift.link}" %>
-            <%= link_to 'Link', formatted_link, target: '_blank' %>
-            <% end %> - 
-            <%= link_to 'Edit', edit_friend_gift_path(@friend, gift) %> | 
-            <%= link_to 'Delete', friend_gift_path(@friend, gift), method: :delete, data: { confirm: 'Are you sure?' } %>
+                <div class ='link-container'>
+                    <% formatted_link = gift.link.start_with?('http://', 'https://') ? gift.link : "http://#{gift.link}" %>
+                    <%= link_to 'Link', formatted_link, target: '_blank', class: 'btn' %>
+                </div>
+            <% end %>  
+            <%= link_to 'Edit', edit_friend_gift_path(@friend, gift), class: 'btn' %> | 
+            <%= link_to 'Delete', friend_gift_path(@friend, gift), method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn' %>
         </li>
     <% end %>
 </ul>
-<%= link_to 'Add Gift', new_friend_gift_path(@friend) %>
-
-<%= link_to 'Edit Friend', edit_friend_path(@friend) %> |
-<%= link_to 'Back to Friends', friends_path %>
+<div class="actions">
+    <%= link_to 'Add Gift', new_friend_gift_path(@friend), class: 'btn' %>
+    <%= link_to 'Edit Friend', edit_friend_path(@friend), class: 'btn' %>
+</div>
+<%= link_to 'Back', friends_path %>
