--- a/app/views/friends/show.html.erb
+++ b/app/views/friends/show.html.erb
@@ -1,7 +1,7 @@
-<h1><%= @friend.name %></h1>
+<h1>Gifts for <%= @friend.name %></h1>
 <h2>Birthday: <%= @friend.birthday.strftime("%B %d") %></h2>
 
-<h2>Gifts</h2>
+<h2>Gifts:</h2>
 <ul>
     <% @friend.gifts.each do |gift| %>
         <li>
@@ -13,13 +13,13 @@
                     <%= link_to 'Link', formatted_link, target: '_blank', class: 'btn' %>
                 </div>
             <% end %>  
-            <%= link_to 'Edit', edit_friend_gift_path(@friend, gift), class: 'btn' %> | 
-            <%= link_to 'Delete', friend_gift_path(@friend, gift), method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn' %>
+            <%= link_to 'Edit', edit_friend_gift_path(@friend, gift), class: 'btn edit' %> | 
+            <%= link_to 'Delete', friend_gift_path(@friend, gift), method: :delete, class: 'btn' %>
         </li>
     <% end %>
 </ul>
 <div class="actions">
-    <%= link_to 'Add Gift', new_friend_gift_path(@friend), class: 'btn' %>
+    <%#= link_to 'Add Gift', new_friend_gift_path(@friend), class: 'btn' %>
     <%= link_to 'Edit Friend', edit_friend_path(@friend), class: 'btn' %>
 </div>
 <%= link_to 'Back', friends_path %>
